// Copyright 2021-2024 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package spec;


message ScalarValuesMessage {
    double double_field = 1;
    float float_field = 2;
    int64 int64_field = 3;
    uint64 uint64_field = 4;
    int32 int32_field = 5;
    fixed64 fixed64_field = 6;
    fixed32 fixed32_field = 7;
    bool bool_field = 8;
    string string_field = 9;
    bytes bytes_field = 11;
    uint32 uint32_field = 12;
    sfixed32 sfixed32_field = 14;
    sfixed64 sfixed64_field = 15;
    sint32 sint32_field = 16;
    sint64 sint64_field = 17;
}

message RepeatedScalarValuesMessage {
    repeated double double_field = 1;
    repeated float float_field = 2;
    repeated int64 int64_field = 3;
    repeated uint64 uint64_field = 4;
    repeated int32 int32_field = 5;
    repeated fixed64 fixed64_field = 6;
    repeated fixed32 fixed32_field = 7;
    repeated bool bool_field = 8;
    repeated string string_field = 9;
    repeated bytes bytes_field = 11;
    repeated uint32 uint32_field = 12;
    repeated sfixed32 sfixed32_field = 14;
    repeated sfixed64 sfixed64_field = 15;
    repeated sint32 sint32_field = 16;
    repeated sint64 sint64_field = 17;
}
